📝 docs: changes variable name
